--- a/src/NES/Button/nes-button.css
+++ b/src/NES/Button/nes-button.css
@@ -71,4 +71,4 @@
 .button-normal:hover p {
   font-size: 33.33333px;
 }
-/*# sourceMappingURL=nes.css.map */
+/*# sourceMappingURL=nes-button.css.map */
